# ambassador

./: CLAUDE.md  CMakeLists.txt
data/: example.mamb  sandbox.mamb
docs/: coding_standards.md  damb_checklist.md  entity_architecture.md  entity_implementation.md  entity_injection.md
docs/.obsidian/: workspace.json
src/: amb_types.hxx  ambassador.cxx  ambassador.hxx  config.cxx  config.hxx  damb_atls.hxx  damb_ents.hxx  damb_format.hxx  damb_imag.hxx  damb_loader.cxx  damb_loader.hxx  damb_loader_atls.cxx  damb_loader_imag.cxx  damb_loader_mapl.cxx  damb_mapl.hxx  damb_runtime.cxx  damb_runtime.hxx  damb_spec.hxx  dambassador.cxx  dambassador.hxx  dambassador_main.cxx  dataformat.hxx  entity.cxx  entity.hxx  event.cxx  format_damb.hxx  loop.cxx  main.cxx  render.cxx  renderable.hxx  runtime_atlas.hxx  runtime_damb.hxx  runtime_entity.hxx  runtime_image.hxx  runtime_map.hxx  runtime_object.hxx  scenedata.hxx  utility_binary.hxx  utility_parse.cxx  utility_parse.hxx  (+4 more)
